--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
-
+this is the start of my github learning 
+i have no idea what im doing 
+but i think for now that is totally ok 
+thank you for reading this 
+i would only expect you to given the name of the file 
