--- a/readme
+++ b/readme
@@ -3,3 +3,8 @@ i have no idea what im doing
 but i think for now that is totally ok 
 thank you for reading this 
 i would only expect you to given the name of the file 
+
+
+
+
+#Adding more information
