--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-this is the start of my github learning 
+ # this is the start of my github learning 
 i have no idea what im doing 
 but i think for now that is totally ok 
 thank you for reading this 
