--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
+ # <h1> Heading </h1>  
  # this is the start of my github learning 
 i have no idea what im doing 
 but i think for now that is totally ok 
@@ -7,4 +8,8 @@ i would only expect you to given the name of the file
 
 
 
-#Adding more information
+
+# Adding more information
+
+* l1
+* l2
