--- a/readme
+++ b/readme
@@ -1,15 +1,2 @@
- # <h1> Heading </h1>  
- # this is the start of my github learning 
-i have no idea what im doing 
-but i think for now that is totally ok 
-thank you for reading this 
-i would only expect you to given the name of the file 
-
-
-
-
-
-# Adding more information
-
-* l1
-* l2
+# Test Heading 
+## this is a test 
