--- a/readme
+++ b/readme
@@ -1,4 +1,26 @@
-# Hello 
-## This is a tesst
-> I must be a dumbass 
-** Formatting is not working for whatever reason **
+# Testing
+
+## Formatting
+
+### Not
+#### WoRkinG
+
+### Hello
+
+#### Nay 1
+* test
+* test
+
+#### Nay 2
+* test
+* test
+
+#### Nay 3
+* test
+* test
+
+#### Reham Roushdy
+ * Slack: @rroushdy
+ * Email: reroushdy@gmail.com
+ * Cell/txt: 612.886.5940
+
